# visage

./: .gitignore  requirements.txt  setup.cfg  todolist.txt
visage/agent/: channel.py  virtio.py
visage/backend/: test.py
visage/cmd/: main.py
visage/common/: exception.py  timeout.py  wrap_exception.py
visage/dispatch/: dispatcher.py
visage/utils/: importutils.py  libvirtutils.py  log.py
