[metadata]
name = visage
version = 0.0.1
summary = A guest agent based on virtio-serial
author = Lizhou fan
author-email = cokie@foxmail.com
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages = visage

[pbr]
warnerrors = True
autodoc_tree_index_modules = True
version = 0.0.1

[entry_points]
console_scripts =
    visage = visage.cmd.main:main